[RFR] Fix a few bugs (#170)
* Fix homepage summary alignment

* Fix social sharing links on mobile / Emmanuel (#28)

* Fix social media links on Emmanuel (#29)

* Add bg color behind homepage image (#25)

* Remove boldness of subtitles (#26)

* Fix layout issue, font family on h2 and other things on hub (#27)

--- a/front/style/_listing.scss
+++ b/front/style/_listing.scss
@@ -76,26 +76,24 @@
 
                 .thumbnail {
                     margin-right: 25px;
+                    width: 220px;
+                    height: 150px;
 
                     img {
-                        width: 220px;
-                        height: 150px;
-                        max-width: inherit;
+                        width: 100%;
                         background-color: $gray;
-
-                        @media (max-width: $mobile) {
-                            width: 110px;
-                            height: 75px;
-                        }
                     }
 
                     @media (max-width: $mobile) {
+                        width: 110px;
+                        height: 75px;
                         margin-right: 15px;
                     }
                 }
 
                 h2 {
                     @include text--medium;
+                    font-family: 'Gillsans';
                     font-weight: 400;
                     margin: 0;
 
