--- a/front/style/_text.scss
+++ b/front/style/_text.scss
@@ -57,7 +57,7 @@ $text--size-extra-large: 48px;
     letter-spacing: .3px;
     line-height: 1.3;
     font-size: $text--size-small;
-    margin: 10px auto 15px;
+    font-weight: 400;
 }
 
 .text {
